--- a/EmpInfo/Views/Home/NoPaperProcess.cshtml
+++ b/EmpInfo/Views/Home/NoPaperProcess.cshtml
@@ -41,6 +41,12 @@
                     <p class="text-center">员工调动申请</p>
                 </a>
             </div>*@
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=SV")">
+                    <img src="@Url.Content("~/Content/images/sv.png")" alt="调休申请" class="center-block" />
+                    <p class="text-center">调休申请(测试)</p>
+                </a>
+            </div>
         </div>
     </div>
 </div>
