--- a/EmpInfo/Views/Shared/_ConfirmDialog.cshtml
+++ b/EmpInfo/Views/Shared/_ConfirmDialog.cshtml
@@ -2,7 +2,7 @@
     Layout = null;
 }
 
-<div class="modal fade" id="confirmModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+<div class="modal fade" id="confirmModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true" style="z-index:2001;">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
