增加离职推送模块

--- a/EmpInfo/Views/Apply/BeginApplyET.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyET.cshtml
@@ -220,6 +220,7 @@
             });
 
             uploader.on('fileQueued', function (file) {
+                file.name = file.name.replace(/&/g, "_");
                 var fileName = file.name;
                 if (fileName.length > 20) {
                     var ext = fileName.substr(fileName.lastIndexOf("."));
