--- a/EmpInfo/Views/Apply/BeginApplyCR.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyCR.cshtml
@@ -48,8 +48,10 @@
             autoclose: true,
             startView: 2,
             maxView: 2,
-            minView:2
-        });               
+            minView: 2,
+            startDate: new Date("@DateTime.Now.AddMonths(-1).ToString("yyyy-MM-01")"),
+            endDate: new Date("@DateTime.Now.ToString("yyyy-MM-dd")")
+    });
 
         $(".timePicker").datetimepicker({
             language: 'zh-CN',
@@ -68,10 +70,10 @@
                 $("#eDepNum").val(selectedDep.depNum);
                 $("#eDepId").val(selectedDep.depId);
             });
-        });       
+        });
 
         $("#confirmMessage").on("change", function () {
-            if ($("#confirmMessage:checked").length > 0) {                
+            if ($("#confirmMessage:checked").length > 0) {
                 $("#apply_bt").removeClass("disabled");
             } else {
                 $("#apply_bt").addClass("disabled");
@@ -83,7 +85,7 @@
             if (!validateForm()) {
                 return;
             }
-            $("#hasAttachment").val($("#al_file_list").children().length>0); //是否有附件            
+            $("#hasAttachment").val($("#al_file_list").children().length>0); //是否有附件
             var forgotDate = Date.parse($("#forgotDate").val().replace(/-/g, "/"));
             if (isNaN(forgotDate)) {
                 toastr.error("[漏刷日期]不合日期规则");
@@ -99,129 +101,129 @@
                 }
             }
 
-        });        
-
-    });
-
-
-
-    //验证表单
-    function validateForm() {
-        if ($("#eDepNum").val() == "") {
-            toastr.error("必须选择[所属部门]");
-            return false;
-        }
-        if ($("input[name='reason']:checked").length < 1) {
-            toastr.error("必须选择[漏刷原因]");
-            return false;
-        }
-        if ($("#forgotDate").val() == "") {
-            toastr.error("必须填写[漏刷日期]");
-            return false;
-        }
-        var reg = /^(20|21|22|23|[0-1]\d):[0-5]\d$/; //时间正则
-        var timeReg = new RegExp(reg);
-        if (!reg.test($("#time1").val())) {
-            toastr.error("[时间1]必须填写正确的时间");
-            return false;
-        }
-
-        var time2 = $("#time2").val();
-        var time3 = $("#time3").val();
-        var time4 = $("#time4").val();
-
-        if ($.trim(time2) != "") {
-            if (!reg.test(time2)) {
-                toastr.error("[时间2]必须填写正确的时间");
-                return false;
-            }
-        }
-        if ($.trim(time3) != "") {
-            if (!reg.test(time3)) {
-                toastr.error("[时间3]必须填写正确的时间");
-                return false;
-            }
-        }
-        if ($.trim(time4) != "") {
-            if (!reg.test(time4)) {
-                toastr.error("[时间4]必须填写正确的时间");
-                return false;
-            }
-        }
-
-        if ($.trim($("#comment").val()) == "") {
-            var reason = $($("input[name='reason']:checked")[0]).val();
-            if (reason == "陪客户" || reason == "外出办公") {
-                toastr.error("漏刷原因是陪客户或外出办公时，必须在备注中注明详情");
-                return false;
-            }            
-        }
-        if (reason == "补办厂牌" && $("#al_file_list").children().length == 0) {
-            toastr.error("原因是【补办厂牌】的必须上传图片证明真实性");
-            return false;
-        }
-        return true;
-    }
-
-    function showDepName() {
-        var name = $("#eDepName").val();
-        var no = $("#eDepNum").val();
-        if (name == "") {
-            toastr.info("请先选择所属部门");
-            return;
-        }
-        openMessageDialog("<div>名称：<span class='text-danger'>" + name + "</span></div><div>编码：<span class='text-danger'>" + no + "</span></div>", "当前所选部门信息");
-    }
-
-    function BeginApply() {        
-        $(this).button("loading");
-        var formParam = $("#alForm").serialize();
-        $.ajax({
-            type: 'post',
-            url: 'GetFlowQueue',
-            data: formParam,
-            cache: false,
-            dataType: 'json',
-            success: function (data) {
-                if (data.suc) {
-                    var q = data.list;
-                    queue = q;
-                    var div = "";
-                    var canSelectAuditor = false;
-                    var depNo = $("#eDepNum").val();                    
-                    for (var i = 0; i < q.length; i++) {
-                        div += "<div>" + q[i].step + ".";
-                        div += "【" + q[i].step_name + "】 <span class='auditors'>" + q[i].auditors + "</span>";                        
-                        div += "</div>";
-                    }
-                    openConfirmDialog(div, function () {
-                        $("#apply_bt").button("loading");
-                        $.ajax({
-                            type: 'post',
-                            url: 'SaveApply',
-                            data: formParam + "&auditor_queues=" + JSON.stringify(queue),
-                            cache: false,
-                            dataType: 'json',
-                            success: function (data) {
-                                $("#apply_bt").button("reset");
-                                if (data.suc) {
-                                    toastr.success("提交成功:" + data.msg);
-                                    setTimeout(function () { window.location.href = "ApplyIndex?billType=CR"; }, 2000);
-                                } else {
-                                    toastr.error("提交失败：" + data.msg);
-                                    $("#apply_bt").button("reset");
-                                }
-
-                            }
-                        });
-                    }, "审批流程预览", "返回修改", "确认提交");
-                } else {
-                    toastr.error(data.msg);
-                }
-                $("#apply_bt").button("reset");
-            }
         });
-    }
+
+        });
+
+
+
+        //验证表单
+        function validateForm() {
+            if ($("#eDepNum").val() == "") {
+                toastr.error("必须选择[所属部门]");
+                return false;
+            }
+            if ($("input[name='reason']:checked").length < 1) {
+                toastr.error("必须选择[漏刷原因]");
+                return false;
+            }
+            if ($("#forgotDate").val() == "") {
+                toastr.error("必须填写[漏刷日期]");
+                return false;
+            }
+            var reg = /^(20|21|22|23|[0-1]\d):[0-5]\d$/; //时间正则
+            var timeReg = new RegExp(reg);
+            if (!reg.test($("#time1").val())) {
+                toastr.error("[时间1]必须填写正确的时间");
+                return false;
+            }
+
+            var time2 = $("#time2").val();
+            var time3 = $("#time3").val();
+            var time4 = $("#time4").val();
+
+            if ($.trim(time2) != "") {
+                if (!reg.test(time2)) {
+                    toastr.error("[时间2]必须填写正确的时间");
+                    return false;
+                }
+            }
+            if ($.trim(time3) != "") {
+                if (!reg.test(time3)) {
+                    toastr.error("[时间3]必须填写正确的时间");
+                    return false;
+                }
+            }
+            if ($.trim(time4) != "") {
+                if (!reg.test(time4)) {
+                    toastr.error("[时间4]必须填写正确的时间");
+                    return false;
+                }
+            }
+
+            if ($.trim($("#comment").val()) == "") {
+                var reason = $($("input[name='reason']:checked")[0]).val();
+                if (reason == "陪客户" || reason == "外出办公") {
+                    toastr.error("漏刷原因是陪客户或外出办公时，必须在备注中注明详情");
+                    return false;
+                }
+            }
+            if (reason == "补办厂牌" && $("#al_file_list").children().length == 0) {
+                toastr.error("原因是【补办厂牌】的必须上传图片证明真实性");
+                return false;
+            }
+            return true;
+        }
+
+        function showDepName() {
+            var name = $("#eDepName").val();
+            var no = $("#eDepNum").val();
+            if (name == "") {
+                toastr.info("请先选择所属部门");
+                return;
+            }
+            openMessageDialog("<div>名称：<span class='text-danger'>" + name + "</span></div><div>编码：<span class='text-danger'>" + no + "</span></div>", "当前所选部门信息");
+        }
+
+        function BeginApply() {
+            $(this).button("loading");
+            var formParam = $("#alForm").serialize();
+            $.ajax({
+                type: 'post',
+                url: 'GetFlowQueue',
+                data: formParam,
+                cache: false,
+                dataType: 'json',
+                success: function (data) {
+                    if (data.suc) {
+                        var q = data.list;
+                        queue = q;
+                        var div = "";
+                        var canSelectAuditor = false;
+                        var depNo = $("#eDepNum").val();
+                        for (var i = 0; i < q.length; i++) {
+                            div += "<div>" + q[i].step + ".";
+                            div += "【" + q[i].step_name + "】 <span class='auditors'>" + q[i].auditors + "</span>";
+                            div += "</div>";
+                        }
+                        openConfirmDialog(div, function () {
+                            $("#apply_bt").button("loading");
+                            $.ajax({
+                                type: 'post',
+                                url: 'SaveApply',
+                                data: formParam + "&auditor_queues=" + JSON.stringify(queue),
+                                cache: false,
+                                dataType: 'json',
+                                success: function (data) {
+                                    $("#apply_bt").button("reset");
+                                    if (data.suc) {
+                                        toastr.success("提交成功:" + data.msg);
+                                        setTimeout(function () { window.location.href = "ApplyIndex?billType=CR"; }, 2000);
+                                    } else {
+                                        toastr.error("提交失败：" + data.msg);
+                                        $("#apply_bt").button("reset");
+                                    }
+
+                                }
+                            });
+                        }, "审批流程预览", "返回修改", "确认提交");
+                    } else {
+                        toastr.error(data.msg);
+                    }
+                    $("#apply_bt").button("reset");
+                }
+            });
+        }
 
     </script>
     <script>
@@ -247,6 +249,7 @@
             });
 
             uploader.on('fileQueued', function (file) {
+                file.name = file.name.replace(/&/g, "_");
                 var fileName = file.name;
                 if (fileName.length > 20) {
                     var ext = fileName.substr(fileName.lastIndexOf("."));
@@ -365,7 +368,7 @@
                     </div>
                     <div class="b-div" style="vertical-align:middle;">
                         <span class="b-label">
-                            <button class="btn btn-block btn-default" disabled>漏刷日期</button>
+                            <button class="btn btn-block btn-default" disabled>日期 & 时间</button>
                         </span>
                         <div style="display:inline-block;width:70%;vertical-align:top;">
                             <div class="input-group date" id="datePicker">                                
@@ -393,16 +396,16 @@
                                 <span class="input-group-addon"><i class="fa fa-calendar"></i> </span>
                             </div>
                         </div>
-                        <p class="small text-danger" style="margin-top:4px;"><i class="fa fa-info-circle"></i> 1天内漏刷卡一次只需填写时间[1]，其它3个留空即可</p>
+                        <p class="small text-danger" style="margin-top:4px;"><i class="fa fa-info-circle"></i> 1天内漏刷/误刷卡一次只需填写时间[1]，其它3个留空即可</p>
                     </div>
                     <div class="b-div">
                         <span class="b-label">
-                            <button class="btn btn-block btn-default" disabled>漏刷原因</button>
+                            <button class="btn btn-block btn-default" disabled>原因</button>
                         </span>
                         <div style="display:inline-block;width:70%">
                             <span style="display:block;margin:0;" class="row">
                                 @{
-                                    string[] types = new string[] { "漏刷卡", "补办厂牌", "陪客户", "外出办公" };
+                                    string[] types = new string[] { "漏刷卡", "补办厂牌", "陪客户", "外出办公","多刷" };
                                     foreach (var ty in types) {                                        
                                         <span class="col-xs-6" style="padding:0 4px;">
                                             <input type="radio" name="reason" value="@ty" /> @ty
@@ -428,9 +431,9 @@
                         <div style="display:inline-block;width:70%">
                             <div id="uploader" class="wu-example">
                                 <div id="picker"> + </div>
-                            </div>
-                        <p class="small text-danger"><i class="fa fa-info-circle"></i> 原因是[补办厂牌]的，必须上传图片证明真实性（最多可上传3张）</p>
+                            </div>                        
                         </div>
+                        <p class="small text-danger"><i class="fa fa-info-circle"></i> 原因是[补办厂牌]的，必须上传图片证明真实性（最多可上传3张）</p>
                     </div>
                     <div class="panel panel-default" id="al_file_panel">
                         <div class="panel-heading">附件信息</div>
