--- a/EmpInfo/Views/Apply/BeginAuditJQApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditJQApply.cshtml
@@ -2,7 +2,6 @@
 @using Newtonsoft.Json;
 @{
     BeginAuditModel bam = (BeginAuditModel)ViewData["bam"];
-    //JQAuditOtherInfoModel otherInfo = (JQAuditOtherInfoModel)bam.otherInfo;
     ei_jqApply otherInfo = (ei_jqApply)bam.otherInfo;
     string auditJson = JsonConvert.SerializeObject(bam.otherInfo);
 }
@@ -114,10 +113,74 @@
     }
 </script>
 
+    @if (bam.isPass == null && bam.stepName == "AH部") {
+        <script>
+            $(function () {
+                getSendMsgLog();
+
+                $("#bookTimePicker").datetimepicker({
+                    language: 'zh-CN',
+                    format: "yyyy-mm-dd hh:ii",
+                    autoclose: true,
+                    startView: 2,
+                    maxView: 2,
+                    minuteStep: 30,
+                });
+
+                $("#sendMsgBt").on("click", function () {
+                    var bookTime = $("#bookTime").val();
+                    if (bookTime == "") {
+                        toastr.error("请先选择预约时间");
+                        return;
+                    }
+                    $.post("@Url.Content("~/ApplyExtra/AHPushJQMsg")", { sysNo: "@bam.sysNum", bookTime: bookTime }, function (data) {
+                        if (data.suc) {
+                            toastr.success("已成功发送预约面谈通知");
+                            setTimeout(getSendMsgLog, 1000);
+                        } else {
+                            toastr.error(data.msg);
+                        }
+                    });
+                });
+
+            });
+
+            function getSendMsgLog() {
+                $.post("@Url.Content("~/ApplyExtra/GetAHPushLog")", { sysNo: "@bam.sysNum" }, function (data) {
+                    if (data.suc) {
+                        $("#msgLog").html(data.msg);
+                    } else {
+                        $("#msgLog").html("此申请单未发送过预约信息");
+                    }
+                });
+            }
+
+        </script>
+    }
+
 }
 @*通过load获取申请单内容*@
 <div class="text-center text-danger" id="waiting"><i class="fa fa-3x fa-spinner fa-pulse"></i></div>
 <div id="applyContent"></div>
+
+@*行政审批，需发送信息*@
+@if (bam.isPass == null && bam.stepName == "AH部") {
+    <div class="auditContent" style="visibility:hidden;">
+            <div class="panel panel-primary">
+                <div class="panel-heading" id="auditHead">
+                    <i class='fa fa-suitcase'></i> 行政约谈
+                </div>
+                <div class="panel-body">
+                    <div class="input-group date" id="bookTimePicker">
+                        <input class="form-control" type="text" id="bookTime" placeholder="请点击选择约谈时间" />
+                        <span class="input-group-addon"><span class="fa fa-calendar"></span> </span>
+                    </div>
+                    <button type="button" class="btn btn-success form-control" style="margin:6px 0;" id="sendMsgBt">发送预约信息</button>
+                    <p class="small text-danger"><i class="fa fa-info-circle"></i> <span id="msgLog"></span> </p>
+                </div>
+            </div>        
+    </div>
+}
 
 @*审批信息*@
 <div class="auditContent">
@@ -148,7 +211,7 @@
                             <span class="input-group-addon"><i class="fa fa-calendar"></i> </span>
                         </span>
                     </span>
-                </div>                
+                </div>
                 <div class="b-div">
                     <span class="b-label" style="vertical-align:top;">
                         工作评价:
