--- a/EmpInfo/Views/Home/NoPaperProcess.cshtml
+++ b/EmpInfo/Views/Home/NoPaperProcess.cshtml
@@ -47,6 +47,12 @@
                     <p class="text-center">调休申请(测试)</p>
                 </a>
             </div>
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=CR")">
+                    <img src="@Url.Content("~/Content/images/rc.png")" alt="考勤补记申请" class="center-block" />
+                    <p class="text-center">考勤补记申请(测试)</p>
+                </a>
+            </div>
         </div>
     </div>
 </div>
