增加电脑维修流程，并整理智慧办公各个功能流程显示逻辑

--- a/EmpInfo/Views/Admin/AuditorSetting.cshtml
+++ b/EmpInfo/Views/Admin/AuditorSetting.cshtml
@@ -1,10 +1,4 @@
-﻿@using EmpInfo.Models;
-@{
-    ei_epEqDeps eqDep = ViewData["eqDep"] as ei_epEqDeps;
-    List<PrDepUserModel> userList = ViewData["userList"] as List<PrDepUserModel>;
-    List<ei_epPrDeps> prDepList = ViewData["prDepList"] as List<ei_epPrDeps>;
-}
-@section CSS{
+﻿@section CSS{
     <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-table/bootstrap-table.min.css")" />    
 }
 @section Scripts{
