--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -7,6 +7,13 @@
             width: 48px;
             height: 48px;
         }
+
+        .p-title {
+            margin: 12px 0;
+            text-decoration: underline;
+            font-style: italic;
+            font-size:16px;
+        }
     </style>
 }
 @section Scripts {
@@ -32,6 +39,23 @@
                 });
             });
 
+            $("#filterText").on("keyup", function () {
+                var text = $.trim($(this).val());
+                var ps = $("#workGroup div div a p");
+                for (var i = 0; i < ps.length; i++) {
+                    var div = $(ps[i]).parents("div")[0];
+                    if ($(ps[i]).html().indexOf(text) >= 0 || ($(ps[i]).attr("data-key") && $(ps[i]).attr("data-key").indexOf(text) >= 0)) {
+                        //$(div).fadeIn(500);
+                        $(div).animate({ opacity: 1 }, "fast");
+                    } else {
+                        //$(div).fadeOut(500);
+                        $(div).animate({ opacity: 0.3 }, "fast");
+                    }
+                }
+
+
+            });
+
         });
     </script>
 }
@@ -44,92 +68,118 @@
         </ol>
     </div>
     <div class="panel-body" id="workGroup">
-        @if (DateTime.Now < DateTime.Parse("2019-05-01")) {
-            <div class="well well-sm text-danger">注意：请假报表功能已移动到请假申请里面</div>
-        }
         <div class="row" style="margin: 0;">
+            <div class="col-xs-12 col-sm-offset-3 col-sm-6 col-md-offset-4 col-md-4">
+                <input type="text" class="form-control" id="filterText" placeholder="在此处输入文本可以搜索功能项" />
+            </div>
+            <div class="col-xs-12 text-danger p-title"><i class="fa fa-th fa-fw"></i> 日常办公 & 考勤相关</div>
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=AL")">
-                    <img src="@Url.Content("~/Content/images/leave.png")" alt="leave" class="center-block" />
-                    <p class="text-center">请假申请</p>
+                    <img src="@Url.Content("~/Content/images/leave.png")" class="center-block" />
+                    <p class="text-center" data-key="休假,年假">请假申请</p>
                 </a>
             </div>
             <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=JQ")">
+                    <img src="@Url.Content("~/Content/images/quit.png")" alt="员工辞职/自离申请" class="center-block" />
+                    <p class="text-center">员工辞职/自离申请</p>
+                </a>
+            </div>
+            @*<div class="col-xs-4 col-sm-3 col-md-2">
+                    <a href="@Url.Content("~/Apply/ApplyIndex?billType=SJ")">
+                        <img src="@Url.Content("~/Content/images/switch.png")" alt="员工调动申请" class="center-block" />
+                        <p class="text-center">员工调动申请</p>
+                    </a>
+                </div>*@
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=SV")">
+                    <img src="@Url.Content("~/Content/images/sv.png")" alt="调休申请" class="center-block" />
+                    <p class="text-center">调休申请(测试)</p>
+                </a>
+            </div>
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=CR")">
+                    <img src="@Url.Content("~/Content/images/rc.png")" alt="考勤补记申请" class="center-block" />
+                    <p class="text-center" data-key="漏刷,多刷,刷卡">考勤补记(测试)</p>
+                </a>
+            </div>
+
+            <div class="col-xs-12 text-danger p-title"><i class="fa fa-th fa-fw"></i> 物流出货 & K3相关</div>
+
+            <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="#" id="K3Img">
-                    <img src="@Url.Content("~/Content/images/box.png")" alt="leave" class="center-block" />
+                    <img src="@Url.Content("~/Content/images/box.png")" class="center-block" />
                     <p class="text-center">K3用户重置</p>
                 </a>
             </div>
-            @*@if (auts.IndexOf("ModuelTest") >= 0) {*@
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=SA")">
-                    <img src="@Url.Content("~/Content/images/stock.png")" alt="leave" class="center-block" />
-                    <p class="text-center">仓管权限申请</p>
+                    <img src="@Url.Content("~/Content/images/stock.png")" class="center-block" />
+                    <p class="text-center">K3仓管权限</p>
                 </a>
             </div>
-            @*}*@
-            @if (auts.IndexOf("StockBillAudit1") >= 0) {
-                <div class="col-xs-4 col-sm-3 col-md-2">
-                    <a href="@Url.Content("~/K3/StockBillAudit")">
-                        <img src="@Url.Content("~/Content/images/paper.png")" alt="leave" class="center-block" />
-                        <p class="text-center">出库单一审</p>
-                    </a>
-                </div>
-            }
-            @if (auts.IndexOf("UnnormalCH") >= 0) {
-                <div class="col-xs-4 col-sm-3 col-md-2">
-                    <a href="@Url.Content("~/Apply/ApplyIndex?billType=UC")">
-                        <img src="@Url.Content("~/Content/images/uc.png")" alt="leave" class="center-block" />
-                        <p class="text-center">非正常出货</p>
-                    </a>
-                </div>
-                <div class="col-xs-4 col-sm-3 col-md-2">
-                    <a href="@Url.Content("~/Apply/ApplyIndex?billType=ET")">
-                        <img src="@Url.Content("~/Content/images/truck.png")" alt="leave" class="center-block" />
-                        <p class="text-center">紧急出货运输</p>
-                    </a>
-                </div>
-            }
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=SP")">
-                    <img src="@Url.Content("~/Content/images/cargo.png")" alt="sp" class="center-block" />
-                    <p class="text-center">寄/收件流程</p>
+                    <img src="@Url.Content("~/Content/images/cargo.png")" class="center-block" />
+                    <p class="text-center" data-key="寄件,快递">寄/收件流程</p>
                 </a>
             </div>
-            @if (auts.IndexOf("BeginApplyTI") >= 0) {
-                <div class="col-xs-4 col-sm-3 col-md-2">
-                    <a href="@Url.Content("~/Apply/ApplyIndex?billType=TI")">
-                        <img src="@Url.Content("~/Content/images/ti.png")" alt="ti" class="center-block" />
-                        <p class="text-center">物流车辆放行</p>
-                    </a>
-                </div>
-            }
-            @if (auts.IndexOf("AssistantEmps") >= 0) {
-                <div class="col-xs-4 col-sm-3 col-md-2">
-                    <a href="@Url.Content("~/Report/AssistantEmps")">
-                        <img src="@Url.Content("~/Content/images/assist.png")" alt="assist" class="center-block" />
-                        <p class="text-center">基辅职员查询</p>
-                    </a>
-                </div>
-            }
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/K3/StockBillAudit")">
+                    <img src="@Url.Content("~/Content/images/paper.png")" class="center-block" />
+                    <p class="text-center">会计部出库单</p>
+                </a>
+            </div>
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=UC")">
+                    <img src="@Url.Content("~/Content/images/uc.png")" class="center-block" />
+                    <p class="text-center" data-key="夜间出货">非正常出货</p>
+                </a>
+            </div>
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=ET")">
+                    <img src="@Url.Content("~/Content/images/truck.png")" class="center-block" />
+                    <p class="text-center">紧急出货运输</p>
+                </a>
+            </div>
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=TI")">
+                    <img src="@Url.Content("~/Content/images/ti.png")" class="center-block" />
+                    <p class="text-center">物流车辆放行</p>
+                </a>
+            </div>
+
+            <div class="col-xs-12 text-danger p-title"><i class="fa fa-th fa-fw"></i> 故障报修</div>
+
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=DP")">
+                    <img src="@Url.Content("~/Content/images/repair.png")" alt="repair" class="center-block" />
+                    <p class="text-center">宿舍维修申请</p>
+                </a>
+            </div>
+
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=EP")">
-                    <img src="@Url.Content("~/Content/images/ep.png")" alt="leave" class="center-block" />
+                    <img src="@Url.Content("~/Content/images/ep.png")" class="center-block" />
                     <p class="text-center">设备故障报修</p>
                 </a>
             </div>
             <div class="col-xs-4 col-sm-3 col-md-2">
-                <a href="@Url.Content("~/Home/EleProcess")">
-                    <img src="@Url.Content("~/Content/images/elepr.png")" alt="elepr" class="center-block" />
-                    <p class="text-center">电子公司流程</p>
-                </a>
-            </div>            
-            <div class="col-xs-4 col-sm-3 col-md-2">
-                <a href="@Url.Content("~/Home/NoPaperProcess")">
-                    <img src="@Url.Content("~/Content/images/computer.png")" alt="computer" class="center-block" />
-                    <p class="text-center">无纸化流程</p>
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=IT")">
+                    <img src="@Url.Content("~/Content/images/it.png")" class="center-block" />
+                    <p class="text-center">电脑故障报修(测试)</p>
                 </a>
             </div>
+
+            <div class="col-xs-12 text-danger p-title"><i class="fa fa-th fa-fw"></i> 其它功能</div>
+
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Report/AssistantEmps")">
+                    <img src="@Url.Content("~/Content/images/assist.png")" class="center-block" />
+                    <p class="text-center">基辅职员查询</p>
+                </a>
+            </div>
+
         </div>
     </div>
 </div>
