--- a/EmpInfo/Views/Report/SVReport.cshtml
+++ b/EmpInfo/Views/Report/SVReport.cshtml
@@ -193,7 +193,7 @@
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
             <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
-            <li><a href="@Url.Content("~/Home/EleProcess")">电子公司专用流程</a></li>
+            <li><a href="@Url.Content("~/Apply/ApplyIndex?billType=SV")">调休申请单</a></li>
             <li class="active">调休报表</li>
         </ol>
     </div>
