--- a/EmpInfo/Views/Apply/CheckALApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckALApply.cshtml
@@ -90,7 +90,11 @@
                             <span class="pull-left" style="margin-top:5px;">@al.applierNameAndCard</span>   
                             <button type="button" class="btn btn-default btn-sm pull-right" id="leaveRecordBt"><i class="fa fa-book"></i> 请假记录</button>
                         </td>
-                    </tr>                    
+                    </tr>                     
+                    <tr>
+                        <th>条形码</th>
+                        <td>@al.account</td>
+                    </tr>                  
                     <tr>
                         <th>申请时间</th>
                         <td>@al.applyTime</td>
