--- a/EmpInfo/Views/Admin/POAccountInfo.cshtml
+++ b/EmpInfo/Views/Admin/POAccountInfo.cshtml
@@ -33,7 +33,7 @@
                 <button class="btn btn-primary" type="button" id="searchBt"><span class="glyphicon glyphicon-search"></span> Search</button>
             </span>
         </div><!-- /input-group -->
-        <a href="@Url.Content("~/WX/GetLocation")">获取位置</a>
+        <a href="@Url.Content("~/WX/JsInterface?actionType=scanQRCode")">扫一扫</a>
         <br />
         <h2 id="result" class="text-primary"></h2>
     </div>
